load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "JSON",
    hdrs = glob([
        "include/**/*.h",
    ]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.c",
	]),
	strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
		"@zlib//:zlib",
		"//Foundation",
	],
)
